--- a/pointCloudSample.xcodeproj/xcshareddata/xcschemes/pointCloudSample.xcscheme
+++ b/pointCloudSample.xcodeproj/xcshareddata/xcschemes/pointCloudSample.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1200"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "E73DD12C24636FEF00D77039"
-               BuildableName = "Point Cloud.app"
-               BlueprintName = "SceneDepthPointCloud"
-               ReferencedContainer = "container:SceneDepthPointCloud.xcodeproj">
+               BlueprintIdentifier = "E4DF0AFD24CF1A1A0024833B"
+               BuildableName = "pointCloudSample.app"
+               BlueprintName = "pointCloudSample"
+               ReferencedContainer = "container:pointCloudSample.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -44,10 +44,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E73DD12C24636FEF00D77039"
-            BuildableName = "Point Cloud.app"
-            BlueprintName = "SceneDepthPointCloud"
-            ReferencedContainer = "container:SceneDepthPointCloud.xcodeproj">
+            BlueprintIdentifier = "E4DF0AFD24CF1A1A0024833B"
+            BuildableName = "pointCloudSample.app"
+            BlueprintName = "pointCloudSample"
+            ReferencedContainer = "container:pointCloudSample.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -61,10 +61,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E73DD12C24636FEF00D77039"
-            BuildableName = "Point Cloud.app"
-            BlueprintName = "SceneDepthPointCloud"
-            ReferencedContainer = "container:SceneDepthPointCloud.xcodeproj">
+            BlueprintIdentifier = "E4DF0AFD24CF1A1A0024833B"
+            BuildableName = "pointCloudSample.app"
+            BlueprintName = "pointCloudSample"
+            ReferencedContainer = "container:pointCloudSample.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
