--- a/SceneDepthPointCloud/Info.plist
+++ b/SceneDepthPointCloud/Info.plist
@@ -36,6 +36,8 @@
 	<true/>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeRight</string>
